--- a/src/index.css
+++ b/src/index.css
@@ -68,3 +68,11 @@ code {
 @import url(./blocks/portfolio/__link/portfolio__link.css);
 @import url(./blocks/portfolio/__link-item/portfolio__link-item.css);
 @import url(./blocks/portfolio/__wrapper-item/portfolio__wrapper-item.css);
+
+@import url(./blocks/footer/footer.css);
+@import url(./blocks/footer/__text/footer__text.css);
+@import url(./blocks/footer/__list/footer__list.css);
+@import url(./blocks/footer/__list-item/footer__list-item.css);
+@import url(./blocks/footer/__links/footer__links.css);
+@import url(./blocks/footer/__link/footer__link.css);
+@import url(./blocks/footer/__copytight/footer__copyright.css);
