--- a/src/blocks/header/__btn-singup/header__btn-singup.css
+++ b/src/blocks/header/__btn-singup/header__btn-singup.css
@@ -2,5 +2,7 @@
   text-decoration: none;
   color: #fff;
   margin-right: 30px;
-  /* margin: 29px 30px 29px auto; */
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 16px;
 }
