--- a/src/blocks/main/__title/main__title.css
+++ b/src/blocks/main/__title/main__title.css
@@ -2,6 +2,8 @@
   z-index: 2;
   color: #fff;
   font-size: 50px;
+  font-weight: 400;
+  line-height: 58px;
   width: 730px;
   text-align: center;
 }
