--- a/src/blocks/portfolio/__link-item/portfolio__link-item.css
+++ b/src/blocks/portfolio/__link-item/portfolio__link-item.css
@@ -1,5 +1,8 @@
 .portfolio__link-item {
   margin: 0;
+  font-size: 30px;
+  font-weight: 400;
+  line-height: 50px;
 }
 
 .portfolio__link-item:last-of-type {
