--- a/src/blocks/student/__title/student__title.css
+++ b/src/blocks/student/__title/student__title.css
@@ -1,5 +1,6 @@
 .student__title {
-  margin-top: 66px;
-  margin-bottom: 0;
+  margin: 0;
   font-size: 50px;
+  font-weight: 400;
+  line-height: 58px;
 }
