--- a/src/blocks/technologies/__title/technologies__title.css
+++ b/src/blocks/technologies/__title/technologies__title.css
@@ -3,4 +3,7 @@
   justify-content: center;
   font-size: 50px;
   margin: 90px 0 26px;
+  font-size: 50px;
+  font-weight: 400;
+  line-height: 58px;
 }
