--- a/src/index.css
+++ b/src/index.css
@@ -65,6 +65,23 @@
 @import url(./blocks/footer/__link/footer__link.css);
 @import url(./blocks/footer/__copytight/footer__copyright.css);
 
+/* FORM */
+@import url(./blocks/form/form.css);
+@import url(./blocks/form/__label/form__label.css);
+@import url(./blocks/form/__input/form__input.css);
+@import url(./blocks/form/__btn/form__btn.css);
+
+/* REGISTER */
+
+@import url(./blocks/register/register.css);
+@import url(./blocks/register/__wrapper/register__wrapper.css);
+@import url(./blocks/register/__title/register__title.css);
+@import url(./blocks/register/__subtitle/register__subtitle.css);
+@import url(./blocks/register/__logo/register__logo.css);
+@import url(./blocks/register/__link/register__link.css);
+
+
+
 body {
   margin: 0 auto;
   max-width: 1280px;
