--- a/src/index.css
+++ b/src/index.css
@@ -70,6 +70,8 @@
 @import url(./blocks/form/__label/form__label.css);
 @import url(./blocks/form/__input/form__input.css);
 @import url(./blocks/form/__btn/form__btn.css);
+@import url(./blocks/form/__btn/_type/form__btn_type_signin.css);
+@import url(./blocks/form/__btn/_type/form__btn_type_signup.css);
 
 /* REGISTER */
 
@@ -77,10 +79,19 @@
 @import url(./blocks/register/__wrapper/register__wrapper.css);
 @import url(./blocks/register/__title/register__title.css);
 @import url(./blocks/register/__subtitle/register__subtitle.css);
-@import url(./blocks/register/__logo/register__logo.css);
 @import url(./blocks/register/__link/register__link.css);
 
+/* LOGO */
 
+@import url(./blocks/logo/logo.css);
+
+/* LOGIN */
+
+@import url(./blocks/login/login.css);
+@import url(./blocks/login/__wrapper/login__wrapper.css);
+@import url(./blocks/login/__title/login__title.css);
+@import url(./blocks/login/__subtitle/login__subtitle.css);
+@import url(./blocks/login/__link/login__link.css);
 
 body {
   margin: 0 auto;
