--- a/src/index.css
+++ b/src/index.css
@@ -74,7 +74,6 @@
 @import url(./blocks/form/__btn/_type/form__btn_type_signup.css);
 
 /* REGISTER */
-
 @import url(./blocks/register/register.css);
 @import url(./blocks/register/__wrapper/register__wrapper.css);
 @import url(./blocks/register/__title/register__title.css);
@@ -82,16 +81,20 @@
 @import url(./blocks/register/__link/register__link.css);
 
 /* LOGO */
-
 @import url(./blocks/logo/logo.css);
 
 /* LOGIN */
-
 @import url(./blocks/login/login.css);
 @import url(./blocks/login/__wrapper/login__wrapper.css);
 @import url(./blocks/login/__title/login__title.css);
 @import url(./blocks/login/__subtitle/login__subtitle.css);
 @import url(./blocks/login/__link/login__link.css);
+
+/* NOTFOUND */
+@import url(./blocks/not-found/__redirect/not-found__redirect.css);
+@import url(./blocks/not-found/__subtitle/not-found__subtitle.css);
+@import url(./blocks/not-found/__title/not-found__title.css);
+@import url(./blocks/not-found/not-found.css);
 
 body {
   margin: 0 auto;
@@ -101,14 +104,4 @@ body {
   font-weight: 400;
   font-style: normal;
   line-height: 22px;
-  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale; */
 }
-
-/* code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-} */
