style: добавлены компоненты: SearchForm, Checkbox, HeaderProfile, MovieCard, Card, SavedMovies, Movies

--- a/src/blocks/header/__btn-login/header__btn-login.css
+++ b/src/blocks/header/__btn-login/header__btn-login.css
@@ -1,9 +1,13 @@
 .header__btn-login {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  text-decoration: none;
   width: 76px;
   height: 32px;
   margin-right: 70px;
   border-radius: 3px;
-  border:none;
   background-color: #2BE080;
   color: #000;
   font-size: 12px;
