--- a/src/blocks/footer/footer.css
+++ b/src/blocks/footer/footer.css
@@ -2,7 +2,9 @@
   display: flex;
   font-size: 13px;
   flex-direction: column;
-  padding: 79px 70px 20px;
+  /* margin: 79px 70px 20px; */
+  padding: 79px 0 20px;
+  margin: auto;
   width: 100%;
   max-width: 1140px;
 }
