--- a/src/blocks/search-form/search-form.css
+++ b/src/blocks/search-form/search-form.css
@@ -1,4 +1,6 @@
 .search-form {
   display: flex;
-  /* justify-content: space-between; */
+  justify-content: center;
+  padding: 80px 0 83px;
+  border-bottom: 1px solid #e8e8e8;
 }
