--- a/src/index.css
+++ b/src/index.css
@@ -130,7 +130,20 @@
 @import url(./blocks/checkbox/__input/checkbox__input.css);
 @import url(./blocks/checkbox/__state/checkbox__state.css);
 
+/* CARD */
+@import url(./blocks/card/card.css);
+@import url(./blocks/card/__title/card__title.css);
+@import url(./blocks/card/__like/card__like.css);
+@import url(./blocks/card/__film-length/card__film-length.css);
+@import url(./blocks/card/__wrapper/card__wrapper.css);
+@import url(./blocks/card/__img/card__img.css);
 
+@import url(./blocks/movies/movies.css);
+@import url(./blocks/movies/__place/movie__place.css);
+@import url(./blocks/movies/__btn/movies__btn.css);
+
+@import url(./blocks/savedMovies/savedMovies.css);
+@import url(./blocks/savedMovies/__place/savedMovies__place.css);
 
 body {
   margin: 0 auto;
