--- a/src/blocks/header-profile/__nav/header-profile__nav.css
+++ b/src/blocks/header-profile/__nav/header-profile__nav.css
@@ -3,3 +3,9 @@
   flex-direction: row;
   align-items: center;
 }
+
+@media screen and (max-width: 768px) {
+  .header-profile__nav {
+    display: none;
+  }
+}
