--- a/src/blocks/movies/movies.css
+++ b/src/blocks/movies/movies.css
@@ -1,4 +1,10 @@
 .movies {
   max-width: 1140px;
-  margin: auto;
+  padding: 0 70px 0;
+}
+
+@media screen and (max-width: 768px) {
+  .movies {
+    padding: 0 30px 0;
+  }
 }
