--- a/src/blocks/project/project.css
+++ b/src/blocks/project/project.css
@@ -2,6 +2,11 @@
   display: flex;
   flex-direction: column;
   padding: 110px 70px 110px;
-  width: 100%;
   max-width: 1140px;
+}
+
+@media screen and (max-width: 769px){ 
+  .project {
+    padding: 90px 50px 90px;
+  }
 }
