--- a/src/blocks/footer/footer.css
+++ b/src/blocks/footer/footer.css
@@ -2,9 +2,13 @@
   display: flex;
   font-size: 13px;
   flex-direction: column;
-  /* margin: 79px 70px 20px; */
   padding: 79px 0 20px;
   margin: auto;
-  width: 100%;
   max-width: 1140px;
+}
+
+@media screen and (max-width: 769px){ 
+  .footer {
+    padding: 79px 30px 20px;
+  }
 }
