--- a/src/blocks/search-form/__btn/search-form__btn.css
+++ b/src/blocks/search-form/__btn/search-form__btn.css
@@ -11,3 +11,10 @@
   position: relative;
   right: 45px;
 }
+
+@media screen and (max-width: 768px){
+  .search-form__btn {
+    right: 40px;
+    position: absolute;
+  }
+}
