--- a/src/blocks/search-form/__checkbox/search-form__checkbox.css
+++ b/src/blocks/search-form/__checkbox/search-form__checkbox.css
@@ -3,3 +3,11 @@
   align-items: center;
   position: relative;
 }
+
+@media screen and (max-width: 768px) {
+  .search-form__checkbox {
+    align-items: center;
+    justify-content: center;
+    margin-top: 38px;
+  }
+}
