--- a/src/blocks/search-form/__input/search-form__input.css
+++ b/src/blocks/search-form/__input/search-form__input.css
@@ -1,8 +1,8 @@
 .search-form__input {
   display: flex;
-  width: 932px;
-  /* max-width: 932px; */
-  /* width: 100%; */
+  /* width: 932px; */
+  max-width: 932px;
+  width: 100%;
   height: 48px;
   border-radius: 50px;
   border: solid 1px #E8E8E8;
