--- a/src/blocks/search-form/search-form.css
+++ b/src/blocks/search-form/search-form.css
@@ -4,3 +4,11 @@
   padding: 80px 0 83px;
   border-bottom: 1px solid #e8e8e8;
 }
+
+@media screen and (max-width: 768px) {
+  .search-form {
+    flex-direction: column;
+    padding: 60px 0 57px;
+
+  }
+}
