--- a/src/blocks/student/__text/student__text.css
+++ b/src/blocks/student/__text/student__text.css
@@ -1,3 +1,12 @@
 .student__text {
   font-size: 14px;
 }
+
+@media screen and (max-width: 769px){ 
+  .student__text {
+    width: 365px;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 18px;
+  }
+}
