--- a/src/blocks/student/__title/student__title.css
+++ b/src/blocks/student/__title/student__title.css
@@ -4,3 +4,10 @@
   font-weight: 400;
   line-height: 58px;
 }
+
+@media screen and (max-width: 769px){ 
+  .student__title {
+    font-size: 40px;
+    line-height: 40px;
+  }
+}
