--- a/src/blocks/footer/footer.css
+++ b/src/blocks/footer/footer.css
@@ -7,8 +7,14 @@
   max-width: 1140px;
 }
 
-@media screen and (max-width: 769px){ 
+@media screen and (max-width: 769px){
   .footer {
     padding: 79px 30px 20px;
+  }
+}
+
+@media screen and (max-width: 460px) {
+  .footer {
+    padding: 79px 0 10px;
   }
 }
