--- a/src/blocks/movies/__place/movie__place.css
+++ b/src/blocks/movies/__place/movie__place.css
@@ -3,4 +3,27 @@
   margin-top: 70px;
   grid-column-gap: 20px;
   grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: (3, 1fr);
+  max-width: 1280px;
+  width: 100%;
+}
+
+@media screen and (max-width: 1140px) {
+  .movies__place {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .movies__place {
+    margin-top: 80px;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (max-width: 460px) {
+  .movies__place {
+    margin-top: 50px;
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
