--- a/src/blocks/card/card.css
+++ b/src/blocks/card/card.css
@@ -1,6 +1,13 @@
 .card {
 display: flex;
 flex-direction: column;
-width: 270px;
+/* width: 270px; */
+width: 100%;
 padding-bottom: 38px;
 }
+
+/* @media screen and (max-width: 1279px) {
+  .card {
+    width: 339px;
+  }
+} */
