--- a/src/blocks/footer/__links/footer__links.css
+++ b/src/blocks/footer/__links/footer__links.css
@@ -3,3 +3,10 @@
   flex-direction: row;
   justify-content: space-between;
 }
+
+@media screen and (max-width: 460px) {
+  .footer__links {
+    flex-direction: column-reverse;
+    padding-top: 30px;
+  }
+}
