--- a/src/blocks/footer/__list/footer__list.css
+++ b/src/blocks/footer/__list/footer__list.css
@@ -3,3 +3,11 @@
   flex-direction: row;
   list-style-type: none;
 }
+
+@media screen and (max-width: 460px) {
+  .footer__list {
+    flex-direction: column;
+    padding: 0;
+    margin: 0;
+  }
+}
