--- a/src/blocks/main/__body/main__body.css
+++ b/src/blocks/main/__body/main__body.css
@@ -3,7 +3,13 @@
   flex-direction: column;
   align-items: center;
   position: relative;
-  height: 580px;
+  height: 320px;
   justify-content: center;
   margin: 82px auto 122px;
+}
+
+@media screen and (max-width: 768px) {
+  .main__body {
+    height: 580px;
+  }
 }
