--- a/src/index.css
+++ b/src/index.css
@@ -159,6 +159,7 @@
 body {
   margin: 0 auto;
   max-width: 1280px;
+  min-width: 320px;
   font-family: 'Inter', 'Arial', 'sans-serif';
   font-size: 14px;
   font-weight: 400;
