--- a/src/blocks/footer/__text/footer__text.css
+++ b/src/blocks/footer/__text/footer__text.css
@@ -13,3 +13,11 @@
   max-width: 1140px;
   margin-top: 20px;
 }
+
+@media screen and (max-width: 460px) {
+  .footer__text {
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 14.52px;
+  }
+}
