--- a/src/blocks/menu/__list/menu__list.css
+++ b/src/blocks/menu/__list/menu__list.css
@@ -7,3 +7,9 @@
   list-style-type: none;
   background-color: #fff;
 }
+
+@media screen and (max-width: 460px) {
+  .menu__list {
+    width: 100%;
+  }
+}
