--- a/src/blocks/not-found/__redirect/not-found__redirect.css
+++ b/src/blocks/not-found/__redirect/not-found__redirect.css
@@ -6,3 +6,10 @@
   text-decoration: none;
   color: #3456F3;
 }
+
+@media screen and (max-width: 460px) {
+  .not-found__redirect {
+    font-size: 12px;
+    line-height: 14.52px;
+  }
+}
