--- a/src/blocks/profile-form/__title/profile-form__title.css
+++ b/src/blocks/profile-form/__title/profile-form__title.css
@@ -6,8 +6,8 @@
   margin: 0 0 123px;
 }
 
-@media screen and (max-width: 768px) {
+/* @media screen and (max-width: 768px) {
   .profile-form__title {
 
   }
-}
+} */
