--- a/src/blocks/login/__title/login__title.css
+++ b/src/blocks/login/__title/login__title.css
@@ -4,3 +4,10 @@
   line-height: 29px;
   margin: 40px auto;
 }
+
+@media screen and (max-width: 460px) {
+  .login__title {
+    text-align: center;
+    margin: 50px auto 80px;
+  }
+}
