--- a/src/blocks/login/__wrapper/login__wrapper.css
+++ b/src/blocks/login/__wrapper/login__wrapper.css
@@ -1,3 +1,15 @@
 .login__wrapper {
   padding: 70px 0;
 }
+
+@media screen and (max-width: 768px) {
+  .login__wrapper {
+    padding: 236px 0;
+  }
+}
+
+@media screen and (max-width: 460px) {
+  .login__wrapper {
+    padding: 70px 20px 40px;
+  }
+}
