--- a/src/blocks/not-found/__title/not-found__title.css
+++ b/src/blocks/not-found/__title/not-found__title.css
@@ -4,3 +4,10 @@
   line-height: 170px;
   margin: 0 0 5px;
 }
+
+@media screen and (max-width: 460px) {
+  .not-found__title {
+    font-size: 80px;
+    line-height: 96.82px;
+  }
+}
