--- a/src/index.css
+++ b/src/index.css
@@ -79,6 +79,7 @@
 @import url(./blocks/register/__title/register__title.css);
 @import url(./blocks/register/__subtitle/register__subtitle.css);
 @import url(./blocks/register/__link/register__link.css);
+@import url(./blocks/register/__wrapper-logo/register__wrapper-logo.css);
 
 /* LOGO */
 @import url(./blocks/logo/logo.css);
@@ -89,6 +90,7 @@
 @import url(./blocks/login/__title/login__title.css);
 @import url(./blocks/login/__subtitle/login__subtitle.css);
 @import url(./blocks/login/__link/login__link.css);
+@import url(./blocks/login/__wrapper-logo/login__wrapper-logo.css);
 
 /* NOTFOUND */
 @import url(./blocks/not-found/__redirect/not-found__redirect.css);
