style: скроллинг в меню

--- a/src/index.css
+++ b/src/index.css
@@ -158,6 +158,11 @@
 @import url(./blocks/menu/__overlay/menu__overlay.css);
 @import url(./blocks/menu/__wrapper/menu__wrapper.css);
 
+/* MENU-BTN */
+
+@import url(./blocks/menu-btn/menu-btn.css);
+@import url(./blocks/menu-btn/__line/menu-btn__line.css);
+
 body {
   margin: 0 auto;
   max-width: 1280px;
