style: поменял стили Header

--- a/src/blocks/header/__btn-singup/header__btn-singup.css
+++ b/src/blocks/header/__btn-singup/header__btn-singup.css
@@ -6,3 +6,9 @@
   font-weight: 500;
   line-height: 16px;
 }
+
+@media screen and (max-width: 460px) {
+  .header__btn-singup {
+    margin-right: 14px;
+  }
+}
