--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -1,7 +1,18 @@
 .header {
-  width: 100%;
-  height: 74px;
+  padding: 18px 70px;
   background-color: #073042;
   display: flex;
   justify-content: space-between;
+}
+
+@media screen and (max-width: 768px) {
+  .header {
+    padding: 18px 30px;
+  }
+}
+
+@media screen and (max-width: 460px) {
+  .header {
+    padding: 18px 10px;
+  }
 }
