--- a/src/blocks/main/__title/main__title.css
+++ b/src/blocks/main/__title/main__title.css
@@ -4,6 +4,14 @@
   font-size: 50px;
   font-weight: 400;
   line-height: 58px;
-  width: 730px;
+  max-width: 730px;
   text-align: center;
+}
+
+@media screen and (max-width: 700px) {
+  .main__title{
+    font-size: 31px;
+    line-height: 39px;
+    max-width: 300px;
+  }
 }
