--- a/src/blocks/student/__info/student__info.css
+++ b/src/blocks/student/__info/student__info.css
@@ -3,3 +3,9 @@
   display: flex;
   flex-direction: row;
 }
+
+@media screen and (max-width: 768px){
+  .student__info {
+    flex-direction: column-reverse;
+  }
+}
