--- a/src/blocks/student/__subtitle/student__subtitle.css
+++ b/src/blocks/student/__subtitle/student__subtitle.css
@@ -5,10 +5,19 @@
   line-height: 20px;
 }
 
-@media screen and (max-width: 769px){ 
+@media screen and (max-width: 768px){
   .student__subtitle {
     margin: 16px 0 20px;
     font-size: 12px;
-    line-height: 18px;    
+    line-height: 18px;
+  }
+}
+
+@media screen and (max-width: 460px){
+  .student__subtitle {
+    width: 292px;
+    font-weight: 500;
+    font-size: 11px;
+    line-height: 16px;
   }
 }
