--- a/src/blocks/student/__text/student__text.css
+++ b/src/blocks/student/__text/student__text.css
@@ -2,11 +2,19 @@
   font-size: 14px;
 }
 
-@media screen and (max-width: 769px){ 
+@media screen and (max-width: 768px){
   .student__text {
     width: 365px;
     font-size: 12px;
     font-weight: 400;
     line-height: 18px;
+  }
+}
+
+@media screen and (max-width: 460px){
+  .student__text {
+    width: 292px;
+    font-size: 11px;
+    line-height: 16px;
   }
 }
