--- a/src/blocks/student/__title/student__title.css
+++ b/src/blocks/student/__title/student__title.css
@@ -5,9 +5,16 @@
   line-height: 58px;
 }
 
-@media screen and (max-width: 769px){ 
+@media screen and (max-width: 768px){
   .student__title {
     font-size: 40px;
     line-height: 40px;
+  }
+}
+
+@media screen and (max-width: 460px){
+  .student__title {
+    font-size: 30px;
+    line-height: 36.31px;
   }
 }
