--- a/src/blocks/main/__logo/main__logo.css
+++ b/src/blocks/main/__logo/main__logo.css
@@ -3,3 +3,10 @@
   height: 320px;
   position: absolute;
 }
+
+@media screen and (max-width: 460px) {
+  .main__logo {
+    width: 248px;
+    height: 248px;
+  }
+}
