--- a/src/blocks/project/__back-end/project__back-end.css
+++ b/src/blocks/project/__back-end/project__back-end.css
@@ -4,3 +4,10 @@
   flex-direction: column;
   align-items: center;
 }
+
+@media screen and (max-width: 460px) {
+  .project__back-end {
+    width: 100px;
+    height: 70px;
+  }
+}
