--- a/src/blocks/project/__front-end/project__front-end.css
+++ b/src/blocks/project/__front-end/project__front-end.css
@@ -4,3 +4,10 @@
   flex-direction: column;
   align-items: center;
 }
+
+@media screen and (max-width: 460px) {
+  .project__front-end {
+    min-width: 184px;
+    min-height: 70px;
+  }
+}
