--- a/src/blocks/project/__text-item/project__text-item.css
+++ b/src/blocks/project/__text-item/project__text-item.css
@@ -1,12 +1,21 @@
 
-@media screen and (max-width: 769px){ 
+@media screen and (max-width: 768px){
   .project__text-item {
-    /* margin-right: 30px; */
+    max-width: 319px;
+  }
+}
+
+@media screen and (max-width: 460px){
+  .project__text-item {
     max-width: 319px;
   }
 
+  .project__text-item:first-of-type {
+    margin: 60px 0 56px;
+  }
+
   .project__text-item:last-of-type {
-    /* margin-right: 0; */
+    margin: 0 0 60px;
   }
 
 }
