--- a/src/blocks/project/__text-subtitle/project__text-subtitle.css
+++ b/src/blocks/project/__text-subtitle/project__text-subtitle.css
@@ -3,3 +3,9 @@
   font-weight: 400;
   line-height: 20px;
 }
+
+@media screen and (max-width: 460px) {
+  .project__text-subtitle {
+    margin: 0;
+  }
+}
