--- a/src/blocks/project/__texts/project__texts.css
+++ b/src/blocks/project/__texts/project__texts.css
@@ -2,3 +2,9 @@
   display: flex;
   flex-direction: row;
 }
+
+@media screen and (max-width: 460px) {
+  .project__texts {
+    flex-direction: column;
+  }
+}
