--- a/src/blocks/portfolio/__link-item/portfolio__link-item.css
+++ b/src/blocks/portfolio/__link-item/portfolio__link-item.css
@@ -9,8 +9,16 @@
   margin-bottom: 0;
 }
 
-@media screen and (max-width: 769px){ 
+@media screen and (max-width: 768px){
   .portfolio__link-item {
     font-size: 28px;
+  }
+}
+
+@media screen and (max-width: 460px){
+  .portfolio__link-item {
+    font-size: 18px;
+    line-height: 28px;
+    letter-spacing: -0.04em;
   }
 }
