--- a/src/blocks/technologies/technologies.css
+++ b/src/blocks/technologies/technologies.css
@@ -5,8 +5,14 @@
   padding: 90px 70px 100px;
 }
 
-@media screen and (max-width: 769px){ 
+@media screen and (max-width: 769px){
   .technologies {
     padding: 90px 50px 90px;
+  }
+}
+
+@media screen and (max-width: 460px){
+  .technologies {
+    padding: 70px 18px 69px;
   }
 }
