--- a/src/blocks/header/__btn-singup/header__btn-singup.css
+++ b/src/blocks/header/__btn-singup/header__btn-singup.css
@@ -7,6 +7,11 @@
   line-height: 16px;
 }
 
+.header__btn-singup:hover {
+  opacity: .7;
+  transition: .2s ease;
+}
+
 @media screen and (max-width: 460px) {
   .header__btn-singup {
     margin-right: 14px;
