--- a/src/blocks/profile-form/__btn/profile-form__btn.css
+++ b/src/blocks/profile-form/__btn/profile-form__btn.css
@@ -10,3 +10,8 @@
 .profile-form__btn:first-of-type {
   margin: 220px 0 16px;
 }
+
+.profile-form__btn:hover {
+  opacity: .7;
+  transition: .2s ease;
+}
