style: Promo adaptiveв

--- a/src/blocks/promo/__subtitle/promo__subtitle.css
+++ b/src/blocks/promo/__subtitle/promo__subtitle.css
@@ -8,3 +8,17 @@
   opacity: .5;
   margin-bottom: 146px;
 }
+
+@media screen and (max-width: 768px) {
+  .promo__subtitle {
+    margin-bottom: 92px;
+    max-width: 260px;
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .promo__subtitle {
+    margin-bottom: 80px;
+  }
+}
