--- a/src/blocks/promo/__wrapper/promo__wrapper.css
+++ b/src/blocks/promo/__wrapper/promo__wrapper.css
@@ -1,3 +1,11 @@
 .promo__wrapper {
   max-width: 640px;
 }
+
+@media screen and (max-width: 768px) {
+  .promo__wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
