--- a/src/blocks/promo/__image/promo__image.css
+++ b/src/blocks/promo/__image/promo__image.css
@@ -2,3 +2,10 @@
   width: 310px;
   height: 304px;
 }
+
+@media screen and (max-width: 460px) {
+  .promo__image {
+    width: 210px;
+    height: 206px;
+  }
+}
