--- a/src/blocks/portfolio/__link/portfolio__link.css
+++ b/src/blocks/portfolio/__link/portfolio__link.css
@@ -14,7 +14,7 @@
   display: block;
   content: "";
   margin-top: 19px;
-  border-bottom: 1px solid #E5E5E5;
+  border-bottom: 1px solid #424242;
   width: 100%;
   max-width: 1140px;
 }
