--- a/src/blocks/project/__front-end-title/project__front-end-title.css
+++ b/src/blocks/project/__front-end-title/project__front-end-title.css
@@ -1,5 +1,5 @@
 .project__front-end-title {
-  background-color: #F2F2F2;
+  background-color: #303030;
   display: flex;
   align-items: center;
   justify-content: center;
