--- a/src/blocks/section-title/section-title.css
+++ b/src/blocks/section-title/section-title.css
@@ -10,7 +10,7 @@
   display: block;
   content: "";
   margin-top: 23px;
-  border-bottom: 1px solid #000;
+  border-bottom: 1px solid #DADADA;
   width: 100%;
   max-width: 1140px;
 }
