--- a/src/blocks/technologies/__stack-item/technologies__stack-item.css
+++ b/src/blocks/technologies/__stack-item/technologies__stack-item.css
@@ -4,7 +4,7 @@
   width: 84px;
   height: 54px;
   border-radius: 10px;
-  background-color: #E8E8E8;
+  background-color: #303030;
 }
 
 .technologies__stack-item:last-of-type {
