--- a/src/blocks/footer/__text/footer__text.css
+++ b/src/blocks/footer/__text/footer__text.css
@@ -2,13 +2,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: #A0A0A0;
+  color: #8B8B8B;
   margin: 0;
 }
 
 .footer__text::after {
   content: "";
-  border-bottom: 1px solid #E5E5E5;
+  border-bottom: 1px solid #424242;
   width: 100%;
   max-width: 1140px;
   margin-top: 20px;
