--- a/src/blocks/project/__front-end-subtitle/project__front-end-subtitle.css
+++ b/src/blocks/project/__front-end-subtitle/project__front-end-subtitle.css
@@ -5,7 +5,7 @@
   margin: 0;
   width: 100%;
   height: 36px;
-  color: #A0A0A0;
+  color: #8B8B8B;
   font-size: 14px;
   font-weight: 500;
   line-height: 17px;
