--- a/src/blocks/technologies/technologies.css
+++ b/src/blocks/technologies/technologies.css
@@ -1,5 +1,5 @@
 .technologies {
-  background-color: #F5F5F5;
+  background-color: #272727;
   display: flex;
   flex-direction: column;
   padding: 90px 70px 100px;
