ref: сменил тему на черную

--- a/src/blocks/form/__btn/form__btn.css
+++ b/src/blocks/form/__btn/form__btn.css
@@ -1,7 +1,7 @@
 .form__btn {
   padding: 0;
   display: block;
-  background-color: #3456f3;
+  background-color: #4285F4;
   border-radius: 3px;
   max-width: 396px;
   width: 100%;
