--- a/src/blocks/profile-form/__input-wrapper/profile-form__input-wrapper.css
+++ b/src/blocks/profile-form/__input-wrapper/profile-form__input-wrapper.css
@@ -10,6 +10,6 @@
 
 .profile-form__input-wrapper:first-of-type {
   padding-bottom: 16px;
-  border-bottom: 1px solid #E8E8E8;
+  border-bottom: 1px solid #424242;
   margin-bottom: 17px;
 }
