--- a/src/blocks/card/__film-length/card__film-length.css
+++ b/src/blocks/card/__film-length/card__film-length.css
@@ -2,6 +2,7 @@
   font-size: 11px;
   font-weight: 400;
   line-height: 13.31px;
-  color: #a0a0a0;
-  margin: 6px 0 0;
+  color: #8B8B8B;
+  padding: 0 14px 14px;
+  margin: 0;
 }
