--- a/src/blocks/card/__like/card__like.css
+++ b/src/blocks/card/__like/card__like.css
@@ -1,10 +1,10 @@
 .card__like {
-  width: 24px;
-  height: 24px;
-  background-color: #f5f5f5;
-  background-image: url('../../../images/icon__heart-red.svg');
+  width: 30px;
+  height: 30px;
+  background-image: url('../../../images/save.svg');
   background-repeat: no-repeat;
   background-position: center;
   cursor: pointer;
   border-radius: 50%;
+  margin-bottom: -20px;
 }
