--- a/src/blocks/card/__wrapper/card__wrapper.css
+++ b/src/blocks/card/__wrapper/card__wrapper.css
@@ -2,6 +2,5 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 10px 0 25px;
-  border-bottom: solid 1px #E8E8E8;
+  padding: 14px 14px 9px;  
 }
