--- a/src/blocks/card/card.css
+++ b/src/blocks/card/card.css
@@ -1,13 +1,19 @@
 .card {
 display: flex;
 flex-direction: column;
-/* width: 270px; */
+max-width: 364px;
+background-color: #222222;
 width: 100%;
-padding-bottom: 38px;
 }
 
-/* @media screen and (max-width: 1279px) {
+@media screen and (max-width: 1140px) {
   .card {
-    width: 339px;
+    max-width: none;
   }
-} */
+}
+
+@media screen and (max-width: 768px) {
+  .card {
+    max-width: none;
+  }
+}
