--- a/src/blocks/header-profile/__text/header-profile__text.css
+++ b/src/blocks/header-profile/__text/header-profile__text.css
@@ -4,11 +4,15 @@
   line-height: 18px;
   font-weight: 400;
   text-decoration: none;
-  color: #000;
+  color: #fff;
+}
+
+.header-profile__text:first-of-type {
+  margin-left: 44px;
 }
 .header-profile__text:last-of-type {
-  margin-right: 13px;
-  margin-left: 30px;
+  margin-right: 0;
+  margin-left: auto;
 }
 
 .header-profile__text:hover {
