--- a/src/blocks/header-profile/header-profile.css
+++ b/src/blocks/header-profile/header-profile.css
@@ -1,6 +1,16 @@
 .header-profile {
-  /* padding: 18px 30px; */
-  padding: 18px 0;
+  padding: 18px 70px;
   display: flex;
-  justify-content: space-between;
+}
+
+@media screen and (max-width: 768px) {
+  .header-profile {
+    padding: 18px 30px
+  }
+}
+
+@media screen and (max-width: 460px) {
+  .header-profile {
+    padding: 18px 10px
+  }
 }
