--- a/src/blocks/menu/__list/menu__list.css
+++ b/src/blocks/menu/__list/menu__list.css
@@ -5,7 +5,7 @@
   flex-direction: column;
   align-items: center;
   list-style-type: none;
-  background-color: #fff;
+  background-color: #202020;
 }
 
 @media screen and (max-width: 460px) {
