--- a/src/blocks/movies/movies.css
+++ b/src/blocks/movies/movies.css
@@ -1,4 +1,4 @@
-.movies {
+/* .movies {
   max-width: 1140px;
   padding: 0 70px 0;
 }
@@ -13,4 +13,4 @@
   .movies {
     padding: 0 10px 0;
   }
-}
+} */
