--- a/src/blocks/profile-form/__input/profile-form__input.css
+++ b/src/blocks/profile-form/__input/profile-form__input.css
@@ -1,10 +1,13 @@
 .profile-form__input {
   width: 100%;
   border: none;
-  /* outline: solid 1px #aeaeae; */
   outline-offset: 0;
+  color: #fff;
+  background-color: #202020;
 }
 
 .profile-form__input:focus {
-  outline: solid 1px #a8a8a8;
+  outline: none;
+  border: none;
+  border-bottom: 1px solid#4285F4;
 }
