--- a/src/blocks/profile/profile.css
+++ b/src/blocks/profile/profile.css
@@ -1,10 +1,10 @@
 .profile {
   /* margin: auto; */
-  padding: 0 70px 0;
-  max-width: 1140px;
+  /* padding: 0 70px 0; */
+  /* max-width: 1140px; */
 }
 
-@media screen and (max-width: 768px) {
+/* @media screen and (max-width: 768px) {
   .profile {
     padding: 0 30px 0;
   }
@@ -14,4 +14,4 @@
   .profile {
     padding: 0 10px 0;
   }
-}
+} */
