--- a/src/blocks/search-form/__btn/search-form__btn.css
+++ b/src/blocks/search-form/__btn/search-form__btn.css
@@ -1,15 +1,15 @@
 .search-form__btn {
-  width: 36px;
-  height: 36px;
-  border-radius: 50%;
+  width: 44px;
+  height: 44px;
+  border-radius: 5px;
   border: none;
-  background-image: url('../../../images/icon-search.svg');
+  background-image: url('../../../images/searchBtn.svg');
   background-color: #3456F3;
   background-repeat: no-repeat;
   background-position: center;
   cursor: pointer;
   position: relative;
-  right: 45px;
+  /* right: 45px; */
 }
 
 .search-form__btn:hover {
@@ -17,7 +17,7 @@
   transition: .2s ease;
 }
 
-@media screen and (max-width: 768px){
+/* @media screen and (max-width: 768px){
   .search-form__btn {
     right: 20px;
     position: absolute;
@@ -28,4 +28,4 @@
   .search-form__btn {
     right: 20px;
   }
-}
+} */
