--- a/src/blocks/search-form/__input/search-form__input.css
+++ b/src/blocks/search-form/__input/search-form__input.css
@@ -1,11 +1,14 @@
 .search-form__input {
   display: flex;
   padding-left: 20px;
-  max-width: 932px;
+  /* max-width: 932px; */
+  margin: 0 10px 0 0;
   width: 100%;
-  height: 48px;
-  border-radius: 50px;
-  border: solid 1px #E8E8E8;
-  margin: 0;
+  height: 50px;
+  border-radius: 8px;
+  border: none;
+  background-color: #2f2f2f;
+  outline: none;
+  color: #8b8b8b;
   /* padding-left: 22px; */
 }
