--- a/src/blocks/search-form/search-form.css
+++ b/src/blocks/search-form/search-form.css
@@ -1,14 +1,20 @@
 .search-form {
   display: flex;
   justify-content: center;
-  padding: 80px 0 83px;
-  border-bottom: 1px solid #e8e8e8;
+  flex-direction: column;
+  margin: 80px 70px 0;
+  padding-bottom: 40px;
+  border-bottom: 1px solid #424242;
 }
 
 @media screen and (max-width: 768px) {
   .search-form {
-    flex-direction: column;
-    padding: 60px 0 57px;
+    margin: 80px 30px 0;
+  }
+}
 
+@media screen and (max-width: 460px) {
+  .search-form {
+    margin: 80px 10px 0;
   }
 }
