--- a/src/blocks/student/__media-item/student__media-item.css
+++ b/src/blocks/student/__media-item/student__media-item.css
@@ -1,7 +1,7 @@
 .student__media-item {
   margin-right: 20px;
   text-decoration: none;
-  color: #000;
+  color: #fff;
   font-weight: 500;
   font-size: 14px;
 }
