--- a/src/blocks/project/__back-end-title/project__back-end-title.css
+++ b/src/blocks/project/__back-end-title/project__back-end-title.css
@@ -1,5 +1,6 @@
 .project__back-end-title {
   background-color: #3DDC84;
+  color: #000;
   display: flex;
   align-items: center;
   justify-content: center;
