--- a/src/blocks/student/__photo/student__photo.css
+++ b/src/blocks/student/__photo/student__photo.css
@@ -5,12 +5,11 @@
   object-fit: cover;
 }
 
-@media screen and (max-width: 769px){
+@media screen and (max-width: 765px){
   .student__photo {
-    width: 255px;
     height: 307px;
-    /* padding: 60px 0 40px; */
     margin: 60px 0 40px;
+    width: 100%;
   }
 }
 
