--- a/src/index.css
+++ b/src/index.css
@@ -133,10 +133,10 @@
 @import url(./blocks/card/__like/card__like.css);
 @import url(./blocks/card/__like/_status/card__like_status_enable.css);
 @import url(./blocks/card/__like/_status/card__like_status_disable.css);
-
 @import url(./blocks/card/__film-length/card__film-length.css);
 @import url(./blocks/card/__wrapper/card__wrapper.css);
 @import url(./blocks/card/__img/card__img.css);
+@import url(./blocks/card/__wrapper-img/card__wrapper-img.css);
 
 @import url(./blocks/movies/movies.css);
 @import url(./blocks/movies/__place/movie__place.css);
