--- a/src/blocks/card/__like/_status/card__like_status_disable.css
+++ b/src/blocks/card/__like/_status/card__like_status_disable.css
@@ -1,3 +1,3 @@
-/* .card__like_status_disable {
-  background-image: url('../../../../images/save-disable.svg');
-} */
+.card__like_status_disable {
+  background-image: url('../../../../images/delete.svg');
+}
