--- a/src/blocks/checkbox/__input/checkbox__input.css
+++ b/src/blocks/checkbox/__input/checkbox__input.css
@@ -2,6 +2,11 @@
   display: none;
 }
 
-.checkbox__input:checked + .checkbox__state::before {
+.checkbox__input:checked + .checkbox__state::before{
   transform: translateX(-16px);
+  background-color: #fff;
+}
+
+.checkbox__input:checked + .checkbox__state {
+  background-color: #2be080;
 }
