--- a/src/blocks/form/__input/form__input.css
+++ b/src/blocks/form/__input/form__input.css
@@ -16,6 +16,6 @@
   border-bottom: 1px solid#4285F4;
 }
 
-.form__input:last-of-type {
+/* .form__input:last-of-type {
   margin-bottom: 0;
-}
+} */
