--- a/src/index.css
+++ b/src/index.css
@@ -66,6 +66,8 @@
 @import url(./blocks/form/__btn/form__btn.css);
 @import url(./blocks/form/__btn/_type/form__btn_type_signin.css);
 @import url(./blocks/form/__btn/_type/form__btn_type_signup.css);
+@import url(./blocks/form/__btn/_status/form__btn_status_disabled.css);
+@import url(./blocks/form/__error/form__error.css);
 
 /* REGISTER */
 @import url(./blocks/register/register.css);
