--- a/src/blocks/profile-form/__input-wrapper/profile-form__input-wrapper.css
+++ b/src/blocks/profile-form/__input-wrapper/profile-form__input-wrapper.css
@@ -13,3 +13,6 @@
   border-bottom: 1px solid #424242;
   margin-bottom: 17px;
 }
+.profile-form__input-wrapper:last-of-type {
+  margin-bottom: 17px;
+}
